# Plant-Simulation

./: CMakeLists.txt  changelog  readme.md  readme.txt
database/: flowers.sql  fruits.sql  species.db  vegetables.sql
include/: color.h  container.h  date.h  discord.h  flower.h  fruit.h  image.h  light.h  plant.h  plants_include.h  ppfd.h  species.h  vegetable.h
src/: color.cpp  date.cpp  flower.cpp  fruit.cpp  main.cpp  plant.cpp  vegetable.cpp
